[package]
name = "sprockets"
version = "0.1.0"
authors = ["Shem Sedrick <ssedrick1@gmail.com>"]
edition = "2018"
description = "A REPL for sockets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
toml = "0.5"
log = "0.4"
pretty_env_logger = "*"
